2022-05-05  G. Branden Robinson <g.branden.robinson@gmail.com>

	* src/preproc/refer/refer.cpp (main): Report system error on
	`fflush()` failure.  POSIX Issue 2 a.k.a. SUSv2 (1997) specifies
	several possible `errno` values this C standard library function
	can set; see
	<https://pubs.opengroup.org/onlinepubs/007908799/xsh/fflush.html>.

2022-05-05  G. Branden Robinson <g.branden.robinson@gmail.com>

	[refer]: Refactor: drop unused function.

	* src/preproc/refer/command.cpp (process_commands): Drop
	definition.
	* src/preproc/refer/command.h (process_commands): Drop
	declaration.

2022-05-04  G. Branden Robinson <g.branden.robinson@gmail.com>

	* src/preproc/refer/refer.cpp (do_file): Fix another off-by-one
	line number reporting bug exposed by fix for Savannah #62391.

2022-05-04  G. Branden Robinson <g.branden.robinson@gmail.com>

	* src/preproc/refer/tests/report-correct-line-numbers.sh: Add
	more regression tests.

2022-05-04  G. Branden Robinson <g.branden.robinson@gmail.com>

	[refer]: Trivially refactor: boolify.

	* src/preproc/refer/command.cpp (input_stack::push_file): Demote
	and rename local variable from `int` to `bool`.
	(bol): Renamed from this...
	(is_at_beginning_of_line): ...to this.

2022-05-04  G. Branden Robinson <g.branden.robinson@gmail.com>

	[refer]: Trivially refactor.

	* src/preproc/refer/command.cpp (input_stack::push_file):
	* src/preproc/refer/refer.cpp (do_file): Drop unnecessary
	construction of integer from integer (return type of `getc()`)
	in argument to error diagnostic functions; parallelizes with
	other diagnostic function calls.

2022-05-04  G. Branden Robinson <g.branden.robinson@gmail.com>

	* src/preproc/refer/command.cpp: Refactor to simplify.
	(get_location): Demote return type from `int` to `void`.  The
	function only ever returned a `1` literal.
	(input_stack::error): Update call site to stop uselessly testing
	return value of `get_location()`.

2022-05-03  G. Branden Robinson <g.branden.robinson@gmail.com>
